# ProyectoAED

./: .gitignore  B+.h  CMakeLists.txt  README.md  main (3).cpp  main.cpp
blockchain/: block.h  blockchain.h  transaccion.h
estructuras/: b+tree.h  double_list.h  forwar_list.h  hash.h  heap.h  nodes.h  trie.h
